refactor: update data models and improve caching configuration