@@ -5,16 +5,20 @@ import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.onlineshop.framework.enums.BizErrorCode;
+import com.onlineshop.framework.exception.BusinessException;
+import com.onlineshop.framework.models.banner.dto.BannerDTO;
 import com.onlineshop.framework.models.banner.vo.BannerVO;
 import com.onlineshop.framework.models.banner.vo.HomeBannerVO;
 import com.onlineshop.framework.models.goods.spu.Goods;
 import com.onlineshop.framework.models.goods.spu.IGoodsService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * 轮播图服务实现类
@@ -27,66 +31,58 @@ public class BannerService extends ServiceImpl<BannerMapper, Banner> implements 
     @Autowired
     private IGoodsService goodsService;
 
+    @CacheEvict(value = "banner", allEntries = true)
+    @Override
+    public boolean saveOrUpdateBanner(BannerDTO dto) {
+        // 验证关联的商品是否存在
+        Goods goods = goodsService.getById(dto.getGoodsId());
+        if (goods == null) {
+            throw new BusinessException(BizErrorCode.BANNER_GOODS_NOT_EXIST);
+        }
+
+        // 将DTO转换为Banner对象
+        Banner banner = BeanUtil.copyProperties(dto, Banner.class);
+        banner.setGoodsName(goods.getName());
+        banner.setGoodsId(goods.getId());
+        return this.saveOrUpdate(banner);
+    }
+
     @Override
     public boolean toggleRecommend(Long id, Boolean isRecommend) {
-        Banner banner = this.getById(id);
-        if (banner != null && isRecommend != null) {
-            banner.setIsRecommend(isRecommend);
-            return this.updateById(banner);
-        }
-        return false;
+        return lambdaUpdate().eq(Banner::getIsRecommend, isRecommend)
+                             .eq(Banner::getGoodsId, id)
+                             .update();
     }
 
+    @Cacheable(value = "banner", key = "'recommend'")
     @Override
     public List<HomeBannerVO> getRecommendBanner() {
-        return lambdaQuery().eq(Banner::getIsRecommend, 1)
+        return lambdaQuery().eq(Banner::getIsRecommend, true)
                             .list()
                             .stream()
-                            .map(banner ->
-                                         BeanUtil.copyProperties(banner, HomeBannerVO.class))
-                            .toList();
+                            .map(this::convertHomeBannerVO)
+                            .collect(Collectors.toList());
+    }
+
+    private HomeBannerVO convertHomeBannerVO(Banner banner) {
+        return HomeBannerVO.builder()
+                           .imageUrl(banner.getImageUrl())
+                           .goodsId(banner.getGoodsId())
+                           .build();
     }
 
     @Override
-    public IPage<BannerVO> pageBannerVO(int pageNum, int pageSize, String keyword, Boolean status) {
-        Page<Banner> page = new Page<>(pageNum, pageSize);
-        LambdaQueryWrapper<Banner> queryWrapper = new LambdaQueryWrapper<>();
-        queryWrapper.like(keyword != null && !keyword.isEmpty(), Banner::getTitle, keyword);
-        queryWrapper.eq(status != null, Banner::getIsRecommend, status);
-        IPage<Banner> bannerPage = this.page(page, queryWrapper);
+    public IPage<BannerVO> pageBannerVO(int pageNum, int pageSize, Boolean status) {
+        IPage<Banner> page = new Page<>(pageNum, pageSize);
 
-        List<Banner> records = bannerPage.getRecords();
-        Map<Long, String> goodsIdToNameMap = getGoodsIdToNameMap(
-                records.stream()
-                       .map(Banner::getGoodsId)
-                       .toList()
-        );
-        List<BannerVO> voList = records.stream()
-                                       .map(banner -> {
-                                           BannerVO vo = BeanUtil.copyProperties(banner,
-                                                                                 BannerVO.class);
-                                           vo.setGoodsName(
-                                                   goodsIdToNameMap.get(banner.getGoodsId()));
-                                           return vo;
-                                       })
-                                       .toList();
-        Page<BannerVO> voPage = new Page<>(pageNum, pageSize, bannerPage.getTotal());
-        voPage.setRecords(voList);
-        return voPage;
+        LambdaQueryWrapper<Banner> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.eq(status != null, Banner::getIsRecommend, status);
+
+        IPage<Banner> bannerPage = this.page(page, queryWrapper);
+        return bannerPage.convert(this::convertBannerVO);
     }
 
-    /**
-     * 根据商品ID列表获取商品ID到商品名称的映射
-     */
-    private Map<Long, String> getGoodsIdToNameMap(List<Long> goodsIds) {
-        if (goodsIds == null || goodsIds.isEmpty()) {
-            return new HashMap<>();
-        }
-        List<Goods> goodsList = goodsService.queryByIds(goodsIds);
-        Map<Long, String> goodsIdToNameMap = new HashMap<>(goodsList.size());
-        for (Goods goods : goodsList) {
-            goodsIdToNameMap.put(goods.getId(), goods.getName());
-        }
-        return goodsIdToNameMap;
+    private BannerVO convertBannerVO(Banner banner) {
+        return BeanUtil.copyProperties(banner, BannerVO.class);
     }
 }
